<resources>
    <string name="app_name">Smartbook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_barcode_scanner">BarcodeScanner</string>
    <string name="title_activity_result_barcode_scanner">Hasil Scan Barcode</string>
    <string name="choose_image">Choose Image</string>
    <string name="todo">TODO</string>
    <string name="enter_a_name">Enter a Name</string>
    <string name="masukkan_id_buku">Masukkan ID Buku</string>
    <string name="masukkan_id_rfid">Masukkan Nilai RFID</string>
    <string name="masukkan_judul_buku">Masukkan Judul Buku</string>
    <string name="masukkan_nama_pengarang">Masukkan Nama Pengarang</string>
    <string name="masukkan_id_kolom">Masukkan ID Kolom</string>
    <string-array name="status">
        <item>Jumlah Buku Di Rak</item>
        <item>Jumlah Buku Diambil</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_name">User Name</string>
</resources>
