<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context="artdroid.com.smartbook.Input"
              tools:showIn="@layout/activity_input">

    <EditText
        android:id="@+id/inputrfid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_id_rfid"/>
    <EditText
        android:id="@+id/inputjudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_judul_buku"/>
    <EditText
        android:id="@+id/inputnamapengarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_nama_pengarang"/>
    <EditText
        android:id="@+id/inputidkolom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_id_kolom"/>

    <Button
        android:id="@+id/buttonChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@android:drawable/ic_menu_gallery"
        android:drawableRight="@android:drawable/ic_menu_gallery"
        android:text="@string/choose_image"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/imageView" android:contentDescription="@string/todo"/>

</LinearLayout>